--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -6,19 +5,20 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: "Ubuntu", serif;
     background-color: #f8f9fa;
     color: #333;
   }
   
   header {
+    font-family: "Ubuntu", serif;
     background-image: linear-gradient(to bottom right, rgb(255, 154, 198), rgb(115, 190, 231));
     color: rgb(255, 255, 255);
     display: flex;
-    justify-content: center; /* Centraliza o conteúdo horizontalmente */
-    align-items: center; /* Centraliza o conteúdo verticalmente */
+    justify-content: center; 
+    align-items: center; 
     padding: 1rem 2rem;
-    position: relative; /* Permite adicionar navegação à direita, se necessário */
+    position: relative; 
   }
   
   .logo{
@@ -27,10 +27,11 @@
 
   header nav {
     position: absolute;
-    right: 2rem; /* Move o menu de navegação para a direita */
+    right: 2rem; 
   }
   
   header .logo {
+    font-family: "Ubuntu", serif;
     font-size: 1.5rem;
     font-weight: bold;
   }
@@ -42,6 +43,7 @@
   }
   
   header nav a {
+    font-family: "Ubuntu", serif;
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -62,7 +64,20 @@
   }
   
   .sidebar h2 {
+    font-family: "Ubuntu", serif;
     margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  .sidebar.left ul li {
+    font-weight: 400;
+    font-family: "Ubuntu", serif;
+    border-radius: 8px; 
+    background-color: #f0f0f0; 
+    padding: 10px;
+    margin-bottom: 5px; 
+    list-style: none; 
+    text-align: center;
   }
   
   .sidebar ul {
@@ -78,6 +93,7 @@
   }
   
   .calendar h2 {
+    font-family: "Ubuntu", serif;
     padding-top: 2em;
     margin-bottom: 1rem;
   }
@@ -146,3 +162,4 @@
     font-weight: 700;
     background-color: #72cef36e;
   }
+
