--- a/paginas/chat.css
+++ b/paginas/chat.css
@@ -60,7 +60,7 @@ header {
 }
 
 .nav-links li a:hover {
-    color: #f4a261; /* Cor de destaque ao passar o mouse */
+    color: #2248476e; /* Cor de destaque quando passar o mouse */
 }
 
 .profile-icon img {
