--- a/paginas/style.css
+++ b/paginas/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Inter", serif;
   background: linear-gradient(to right, #6bffe1, #cffd7a67); /* da esquerda para a direita, do amarelo para o roxo */
   color: #333;
+  
 }
 
 header {
@@ -48,7 +49,7 @@ header {
 }
 
 .nav-links li a:hover {
-  color: #f4a261; /* Cor de destaque quando passar o mouse */
+  color: #2248476e; /* Cor de destaque quando passar o mouse */
 }
 
 .profile-icon img {
@@ -101,6 +102,7 @@ main {
   border-radius: 30px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc; /* Bordas (opcional) */
+  margin-top: -6.3em;
 }
 
 /* Flexbox na barra de ferramentas */
@@ -143,12 +145,12 @@ main {
 
 /* Change background color of the current day */
 .fc-day-today .fc-daygrid-day-frame {
-  background-color: #676767a4; /* Current day color */
+  background-color: #27515500; /* Current day color */
 }
 
 /* Change color when hovering over days */
 .fc-daygrid-day:hover .fc-daygrid-day-frame {
-  background-color: #6e979854; /* Hover color */
+  background: linear-gradient(to right, #6bffe136, #cffd7a4d); /* da esquerda para a direita, do amarelo para o roxo */
 }
 
 .fc-daygrid-day-number {
@@ -236,7 +238,7 @@ main {
   font-family: "Ubuntu", serif;
   font-weight: 700;
   padding: 1rem;
-  background-color: #66492fa7;
+  background-color: #ffffffa7;
   border-radius: 4px;
   text-align: center;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -303,9 +305,9 @@ main {
 }
 
 #miniCalendar td.today {
-  background-color: #ffeb3b;
+  background-color: #efefa5b8;
   font-weight: bold;
-  border-radius: 50%;
+  border-radius: 1%;
 }
 .event-indicator {
   display: block;
@@ -327,19 +329,19 @@ main {
   padding: 12px 24px; /* Maior altura e largura */
   font-size: 16px; /* Tamanho de fonte maior */
   font-weight: bold;
-  background-color: #8091aabd; /* Cor de fundo verde */
-  color: white; /* Cor do texto */
-  border: none;
+  background-color: #ffffff; /* Cor de fundo verde */
+  color: rgb(0, 0, 0); /* Cor do texto */
+  border: 1px solid #ddd;
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease; /* Efeitos de transição */
   text-align: center;
   width: 100%; /* Faz o botão ocupar toda a largura disponível */
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra leve */
 }
 
 #openModalBtn:hover {
-  background-color: #8091aa51; /* Cor um pouco mais escura quando o botão é hover */
-  transform: scale(1.05); /* Leve aumento de tamanho quando passar o mouse */
+  background: linear-gradient(to right, #6bffe166, #cffd7a50); /* da esquerda para a direita, do amarelo para o roxo */
 }
 
 #openModalBtn:focus {
@@ -347,8 +349,8 @@ main {
 }
 
 #openModalBtn:active {
-  background-color: #8091aa51; /* Cor ainda mais escura quando pressionado */
-  transform: scale(1.02); /* Efeito de clique */
+  background: linear-gradient(to right, #6bffe166, #cffd7a50); /* da esquerda para a direita, do amarelo para o roxo */
+  transform: scale(0.9); /* Efeito de clique */
 }
 
 /* Centralizando o botão na página */
@@ -363,13 +365,14 @@ main {
 
 /* Conteúdo do modal */
 .modal-content {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 30px;
   padding: 20px;
   width: 400px; /* Largura fixa */
   max-width: 90%; /* Para telas pequenas */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar destaque */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para dar destaque */
   animation: modalAnimation 0.4s ease-out;
+  border: 1px solid #ddd;
 }
 
 /* Animação de entrada do modal */
@@ -434,17 +437,17 @@ main {
   padding: 12px 24px;
   margin-bottom: 1em;
   font-size: 16px;
-  background-color: #8091aabd;
-  color: white;
-  border: none;
+  background-color: #ffffffbd;
+  color: rgb(0, 0, 0);
+  border: 1px solid #ddd; /* Borda leve */
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra leve */
 }
 
 #eventForm button:hover {
-  background-color: #8091aa51;
-  transform: scale(1.05);
+  background: linear-gradient(to right, #6bffe166, #cffd7a50); /* da esquerda para a direita, do amarelo para o roxo */
 }
 
 #eventForm button:focus {
@@ -452,46 +455,48 @@ main {
 }
 
 #eventForm button:active {
-  background-color: #8091aa51;
-  transform: scale(1.02);
+  background: linear-gradient(to right, #6bffe166, #cffd7a50); /* da esquerda para a direita, do amarelo para o roxo */
+  transform: scale(0.9);
 }
 
 /* Botão Cancelar */
 #cancelEventBtn {
   padding: 12px 24px;
   font-size: 16px;
-  background-color: #8091aabd; /* Cor vermelha para cancelar */
-  color: white;
-  border: none;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  border: 1px solid #ddd; /* Borda leve */
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
   margin-top: 10px; /* Espaço acima do botão */
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra leve */
+
 }
 
 #cancelEventBtn:hover{
-  background-color: #8091aa51;
-  transform: scale(1.05);
+  background: linear-gradient(to right, #6bffe136, #cffd7a4d); /* da esquerda para a direita, do amarelo para o roxo */
 }
 
 #deleteEventBtn {
   padding: 12px 24px;
   font-size: 16px;
-  background-color: #8091aabd; /* Cor vermelha para cancelar */
-  color: white;
-  border: none;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  border: 1px solid #ddd; /* Borda leve */
   border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra leve */
+
 }
 #deleteEventBtn:hover {
-  background-color: #8091aa51;
-  transform: scale(1.05);
+  background: linear-gradient(to right, #6bffe136, #cffd7a4d); /* da esquerda para a direita, do amarelo para o roxo */
 }
 
 #deleteEventBtn:active {
-  background-color: #8091aa51;
-  transform: scale(1.02);
+  background: linear-gradient(to right, #6bffe136, #cffd7a4d); /* da esquerda para a direita, do amarelo para o roxo */
+  transform: scale(0.9);
 }
 
 #cancelEventBtn:focus {
@@ -499,8 +504,8 @@ main {
 }
 
 #cancelEventBtn:active {
-  background-color: #8091aa51;
-  transform: scale(1.02);
+  background: linear-gradient(to right, #6bffe136, #cffd7a4d); /* da esquerda para a direita, do amarelo para o roxo */
+  transform: scale(0.9);
 }
 /* Estilo para o filtro de categorias */
 #filters {
@@ -606,3 +611,4 @@ input#filterTrabalho:checked {
 input#filterLembrete:checked {
   accent-color: #4CAF50;  /* Azul para 'Lembrete' */
 }
+ 
